# us-accidents

./: .gitattributes  .gitignore  README.md  notebook.ipynb  pyproject.toml  us_accidents.ipynb
.dvc/: config
dags/: classifier.py
data/: .gitignore  US_Accidents_Dec20_updated.csv.dvc
include/bentoml/: bentofile.yaml  service.py
include/docker-compose/: docker-compose.yml
notebooks/: us_accidents.ipynb
